- release 1.1.2b-jdk1_4 code base   - minor changes to compile with JDK 1.4